<resources>
    <string name="app_name">Code Atlas</string>
    <string name="roadmap">Roadmap</string>
    <string name="articles">Articles</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="forums">Forums</string>
    <string name="profile_user">Profile User</string>
    <string name="number_lives_btn">5</string>
    <string name="num_gems_btn">200</string>
    <string name="num_xp_btn">820</string>
    <string name="code_atlas">Code Atlas</string>
    <string name="username">Username</string>
    <string name="create_your_account">Create your account</string>
    <string name="register">Register</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="login">Login</string>
    <string name="forgor_password">Forgor Password?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="description">description</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_profile_picture_from_gallery">Choose profile picture from gallery</string>
    <string name="select_source">Select Source</string>
    <string name="container">Container</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="_4">4</string>
    <string name="search">Search</string>
    <string name="community">Community</string>
    <string name="read_up_on_the_latest_events_features_and_more">Read up on the latest events, features, and more!</string>
    <string name="need_help_on_an_exercise_or_a_project_this_is_where_you">Need help on an exercise or a project? This is where you...</string>
    <string name="hearts">Hearts</string>
    <string name="location">Location</string>
    <string name="back">back</string>
    <string name="some_title">Some Title</string>
    <string name="test">Test</string>
    <string name="some_user">some user</string>
    <string name="_17_december_2024">17 December 2024</string>
    <string name="close">close</string>
    <string name="sort">sort</string>
    <string name="add">add</string>
    <string name="add_profile">add profile</string>
    <string name="category">category</string>
    <string name="top_layout">Top Layout</string>
    <string name="Continue">Continue</string>
    <string name="add_bio">Add bio</string>
    <string name="choose_profile_picture">Choose Profile Picture</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="heart_header">Heart Header</string>
    <string name="line">line</string>
    <string name="next_heart_in">Next Heart in:</string>
    <string name="_00_20_00">00:20:00</string>
    <string name="you_ran_out_of_hearts_to_solve_exercises_you_need_at_least_1_heart">You ran out of hearts. To solve exercises, you need at least 1 heart.</string>
    <string name="container_for_refilling">Container for refilling</string>
    <string name="heart_1">heart 1</string>
    <string name="heart_2">heart 2</string>
    <string name="heart_3">heart 3</string>
    <string name="heart_4">heart 4</string>
    <string name="heart_5">heart 5</string>
    <string name="gems">Gems</string>
    <string name="_100">100</string>
    <string name="refill">Refill</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="events">Events</string>
    <string name="tag">Tag</string>
    <string name="codeforces">Codeforces</string>
    <string name="category_square">category square</string>
    <string name="textview">TextView</string>
    <string name="profile_picture_of_first">Profile Picture of First</string>
    <string name="profile_picture_of_second">Profile Picture of Second</string>
    <string name="profile_picture_of_third">Profile Picture of Third</string>
    <string name="second_name">Second Name</string>
    <string name="first_name">First Name</string>
    <string name="third_name">Third Name</string>
    <string name="points">points</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="xp">XP</string>
    <string name="skip">Skip</string>
    <string name="choose_location">Choose Location</string>
    <string name="your_location_will_be_used_to_find_the_best_recommendation_events_near_you">Your location will be used to find the best recommendation events near you.</string>
    <string name="location_image">Location Image</string>
    <string name="use_location">Use Location</string>
    <string name="use_current_loctaion">Use Current Loctaion</string>
    <string name="top">top</string>
    <string name="down">down</string>
    <string name="circle">Circle</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="rectangle">Rectangle</string>
    <string name="rectangle_for_chapter_tag">Rectangle For Chapter Tag</string>
    <string name="mathematics">Mathematics</string>
    <string name="list">List</string>
    <string name="ellipse">Ellipse</string>
    <string name="_43">43%</string>
    <string name="number_theory">Number Theory</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="add_bio2">+ Add bio</string>
    <string name="codeforces_account">Codeforces Account</string>
    <string name="account">account</string>
    <string name="type">type</string>
    <string name="announcements">Announcements</string>
    <string name="latest">Latest</string>
    <string name="threads">Threads</string>
    <string name="thread_name">Thread Name</string>
    <string name="title">Title</string>
    <string name="body">body</string>
    <string name="send">Send</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="user_not_found">User not found.</string>
    <string name="ge">Ge</string>
    <string name="general">General</string>
    <string name="start_a_discussion_or_ask_a_question">Start a discussion or ask a question!</string>
    <string name="hi_there_and_welcome_at_code_atlas_we_ve_rallied_behind_the">Hi there and welcome! At code atlas, we\'ve rallied behind the</string>
    <string name="author_username">author_username</string>
    <string name="post_title">Post Title</string>
    <string name="_07">07</string>
    <string name="thu">THU</string>
    <string name="details">Details</string>
    <string name="start">Start:</string>
    <string name="length">Length</string>
    <string name="rank">Rank</string>
    <string name="star">star</string>
    <string name="dialog_holder">Dialog Holder</string>
    <string name="verify_email">Verify Email</string>
    <string name="you_need_to_verify_your_email_to_create_new_posts">You need to verify your email to create new posts.</string>
    <string name="set_location_on_map">Set Location on Map</string>
    <string name="set_location_entered_by_user">Set Location Entered By User</string>
    <string name="topic_name">Topic Name</string>
    <string name="article_title">Article Title</string>
    <string name="level">Level</string>
    <string name="ring">Ring</string>
    <string name="map_platform">Map Platform</string>
    <string name="star_icon">Star Icon</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="about_us">About us</string>
    <string name="change_username">Change Username</string>
    <string name="change_password">Change Password</string>
    <string name="log_out">Log Out</string>
    <string name="old_password">old password</string>
    <string name="new_password">new password</string>
    <string name="new_username">new username</string>
</resources>