<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <item
            android:id="@+id/action_log_out"
            android:title="@string/log_out"
            android:icon="@drawable/logout_baseline"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/action_change_password"
            android:title="@string/change_password"
            android:icon="@drawable/lock"
            app:showAsAction="ifRoom"
            />
        <item
            android:id="@+id/action_change_username"
            android:title="@string/change_username"
            android:icon="@drawable/account_box"
            app:showAsAction="ifRoom"
            />
        <item
            android:id="@+id/about_us"
            android:title="@string/about_us"
            android:icon="@drawable/about_us_baseline"
            app:showAsAction="ifRoom"/>

</menu>