<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:orientation="horizontal"
    android:background="@color/nav_bar_color"
    android:id="@+id/navBar">

    <ImageButton
        android:id="@+id/roadmapNavIcon"
        android:layout_width="50dp"
        android:layout_height="70dp"
        android:layout_weight="1"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/nav_bar_color"
        android:src="@drawable/nav_goal_icon"
        android:contentDescription="@string/roadmap" />

    <ImageButton
        android:id="@+id/articleNavIcon"
        android:layout_width="50dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:background="@color/nav_bar_color"
        app:srcCompat="@drawable/nav_icon_library"
        android:contentDescription="@string/articles" />

    <ImageButton
        android:id="@+id/trophyNavIcon"
        android:layout_width="50dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:background="@color/nav_bar_color"
        app:srcCompat="@drawable/nav_bar_trophy"
        android:contentDescription="@string/leaderboard" />

    <ImageButton
        android:id="@+id/communityNavIcon"
        android:layout_width="50dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:background="@color/nav_bar_color"
        app:srcCompat="@drawable/nav_icon_bubble_chat"
        android:contentDescription="@string/forums" />

    <ImageButton
        android:id="@+id/profileNavIcon"
        android:layout_width="50dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:background="@color/nav_bar_color"
        app:srcCompat="@drawable/nav_icon_profile_user"
        android:contentDescription="@string/profile_user" />
</LinearLayout>