<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="300dp"
    android:background="@drawable/forgot_password_background">

    <ImageView
        android:id="@+id/dialogHolder"
        android:layout_width="350dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/container" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="281dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/register_edittext_background"
        android:ems="10"
        android:fontFamily="@font/anonymous_pro"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="22dp"
        android:paddingEnd="22dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@+id/dialogHolder"
        app:layout_constraintTop_toBottomOf="@+id/textViewForgotPassword"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/dialogHolder"
        app:layout_constraintTop_toTopOf="@+id/dialogHolder" />

    <ImageButton
        android:id="@+id/send"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:background="@color/transparent"
        android:contentDescription="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/dialogHolder"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/dialogHolder"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        app:srcCompat="@drawable/forgot_password_button" />

    <TextView
        android:id="@+id/registerTextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/send"
        app:layout_constraintEnd_toEndOf="@+id/send"
        app:layout_constraintStart_toStartOf="@+id/send"
        app:layout_constraintTop_toTopOf="@+id/send"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/user_not_found"
        android:textColor="#BF6A6A"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/emailEditText"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/hint"
        app:layout_constraintTop_toTopOf="@+id/hint"
        app:srcCompat="@drawable/close_icon"
        app:tint="#BF6A6A"
        android:contentDescription="@string/close" />

</androidx.constraintlayout.widget.ConstraintLayout>